--- a/RWTool/AndroidManifest.xml
+++ b/RWTool/AndroidManifest.xml
@@ -31,7 +31,7 @@
         </activity>
         
         <!-- push应用定义消息receiver声明 -->
-        <receiver android:name="com.roland.rwtool.BaeMessageReceiver">
+        <receiver android:name="com.roland.rwtool.data.BaeMessageReceiver">
             <intent-filter>
                 <!-- 接收push消息 -->
                 <action android:name="com.baidu.android.pushservice.action.MESSAGE" />
